cmake_minimum_required(VERSION 4.0)
project(ProyecFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProyecFinal
        main.cpp
        Pista.cpp
        Pista.h
        Detective.cpp
        Detective.h
        Sospechoso.cpp
        Sospechoso.h
        Ubicacion.cpp
        Ubicacion.h
        Pila.cpp
        Pila.h
        Cola.cpp
        Cola.h
        TablaHash.cpp
        TablaHash.h
        Mapa.cpp
        Mapa.h
        ABB.cpp
        ABB.h)