cmake_minimum_required(VERSION 4.0)
project(ProyecFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProyecFinal
        main.cpp
        Pista.cpp
        Detective.cpp
        Sospechoso.cpp
        Ubicacion.cpp
        Pila.cpp
        Cola.cpp
        TablaHash.cpp
        Mapa.cpp
        ABB.cpp
        Juego.cpp
        Juego.h
)